# spreadsheet-validator

./: pyproject.toml  requirements.txt
data/: failure.xlsx  spreadsheet.xlsx
src/: app.py  backend.py  contract.py  frontend.py
tests/: test_app.py  test_unit.py
