[tool.poetry]
name = "spreadsheet-validator"
version = "0.1.0"
description = ""
authors = ["acn3to <costanetoow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.17.2"
pytest = "^7.4.4"
streamlit = "^1.30.0"
taskipy = "^1.12.2"

[tool.taskipy.tasks]
run = "lsof -ti :8501 | xargs kill -9 | streamlit run src/app.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
