[tool.poetry]
name = "spreadsheet-validator"
version = "0.1.0"
description = ""
authors = ["acn3to <costanetoow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.17.2"
pytest = "^8.0.0"
streamlit = "^1.30.0"
taskipy = "^1.12.2"
pydantic = {extras = ["email"], version = "^2.6.1"}
openpyxl = "^3.1.2"

[tool.taskipy.tasks]
kill = "lsof -ti :8501 && xargs kill -9"
run = "streamlit run src/app.py"
test = "pytest tests -v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
